gitops/apps/9router/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: 9router
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: 9router
  template:
    metadata:
      labels:
        app.kubernetes.io/name: 9router
    spec:
      containers:
        - name: 9router
          image: decolua/9router:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 20128
          volumeMounts:
            - name: data
              mountPath: /app/data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: 9router-data
